--- a/chat_challenge_CSS.css
+++ b/chat_challenge_CSS.css
@@ -1,6 +1,6 @@
 * {
-  background: white;
-  font-family: Optima, Sans-Serif;
+    background: white;
+    font-family: Optima, Sans-Serif;
 }
 h1 {
     font-family: Noteworthy, Comic Sans MS;
@@ -12,16 +12,21 @@ h3 {
 }
 
 .button{
-    height: 35px;
-    width: 100px;
-    padding-top: 3px;
+    height: 28px;
+    width: 75px;
+    padding-bottom: 3px;
     border-radius: 5px;
     background-color: cornflowerblue;
     text-align: center;
     color: black;
     font-family: Optima, GillSans, Sans-Serif;
-    font-size: 16px;
-    opacity: 0.95;
+    font-size: 12pt;
+    opacity: 0.65;
+}
+
+.button:hover {
+    opacity: 1;
+    color: white;
 }
 
 fieldset {
@@ -38,38 +43,42 @@ textarea {
     border: 1px solid #000000;
     border-radius: 3px;
 }
-        
+
 #result {
     margin-bottom: 10px;
     padding: 10px;
     border: 1px solid #0000ff;
+    border-radius: 5px;
     background-color: #ddddff;
     list-style-type: none;
 }
 
-#result empty {
+#result:empty {
+    border-width: 0;
+    padding: 0;
+}
 
 /*
-.messages {
-    list-style-type: none;
-    background: lightsteelblue;
-    padding: 10px;
-    margin: 5px;
-    color: darkslateblue;
-    border-bottom: solid darkslateblue 1px;
-}
-
-.messages li:nth-child(odd) {
-  background: silver;
-  color: darkslateblue;
-  border-bottom: solid darkslateblue 1px;
-}
-
-.message-input {
-    height: 50px;
-    width: 100%;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #c0c0c0;
-    border-radius: 5px;
-}*/
+ .messages {
+ list-style-type: none;
+ background: lightsteelblue;
+ padding: 10px;
+ margin: 5px;
+ color: darkslateblue;
+ border-bottom: solid darkslateblue 1px;
+ }
+ 
+ .messages li:nth-child(odd) {
+ background: silver;
+ color: darkslateblue;
+ border-bottom: solid darkslateblue 1px;
+ }
+ 
+ .message-input {
+ height: 50px;
+ width: 100%;
+ margin: 10px;
+ padding: 10px;
+ border: 1px solid #c0c0c0;
+ border-radius: 5px;
+ }*/
