--- a/chat_challenge_CSS.css
+++ b/chat_challenge_CSS.css
@@ -1,6 +1,6 @@
 * {
-    background: white;
-    font-family: Optima, Sans-Serif;
+  background: white;
+  font-family: Optima, Sans-Serif;
 }
 h1 {
     font-family: Noteworthy, Comic Sans MS;
@@ -12,9 +12,10 @@ h3 {
 }
 
 .button{
-    height: 28px;
+    height: 30px;
     width: 75px;
-    padding-bottom: 3px;
+    padding-top: 3px;
+    margin-top: 5px;
     border-radius: 5px;
     background-color: cornflowerblue;
     text-align: center;
@@ -43,7 +44,7 @@ textarea {
     border: 1px solid #000000;
     border-radius: 3px;
 }
-
+        
 #result {
     margin-bottom: 10px;
     padding: 10px;
@@ -58,27 +59,16 @@ textarea {
     padding: 0;
 }
 
-/*
- .messages {
- list-style-type: none;
- background: lightsteelblue;
- padding: 10px;
- margin: 5px;
- color: darkslateblue;
- border-bottom: solid darkslateblue 1px;
- }
- 
- .messages li:nth-child(odd) {
- background: silver;
- color: darkslateblue;
- border-bottom: solid darkslateblue 1px;
- }
- 
- .message-input {
- height: 50px;
- width: 100%;
- margin: 10px;
- padding: 10px;
- border: 1px solid #c0c0c0;
- border-radius: 5px;
- }*/
+
+li {
+    list-style-type: none;
+    background: lightsteelblue;
+    padding: 10px;
+    margin: 5px;
+    color: darkslateblue;
+}
+
+li:nth-child(odd) {
+  background: silver;
+  color: darkslateblue;
+}
